--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    user-select: none;
 }
 
 body {
@@ -64,4 +63,17 @@ body {
 .found {
     transform: rotateY(180deg);
     pointer-events: none;
+}
+
+.popupWindow {
+    width: 100%;
+    max-width: 600px;
+    height: 400px;
+    background-color: whitesmoke;
+    border-radius: 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    visibility: hidden;
 }
