--- a/style.css
+++ b/style.css
@@ -18,8 +18,8 @@ body {
 
 .memoryGameWindow {
     grid-column: 2/2;
-    width: 1000px;
-    height: 850px;
+    max-width: 1200px;
+    height: auto;
     margin: 2% auto;
     display: flex;
     flex-wrap: wrap;
@@ -36,6 +36,7 @@ body {
     transform-style: preserve-3d;
     transition: transform .2s;
     box-sizing: border-box;
+    max-width: calc(22% + 10px);
 }
 
 .card:active {
@@ -76,4 +77,35 @@ body {
     top: 50%;
     transform: translate(-50%, -50%);
     visibility: hidden;
+}
+
+@media screen and (max-height: 880px) {
+    .memoryGameWindow {
+        width: 900px;
+        height: 800px;
+    }
+}
+
+@media screen and (max-height: 850px) {
+    .memoryGameWindow {
+        height: 750px;
+    }
+}
+
+@media screen and (max-height: 795px) {
+    .memoryGameWindow {
+        height: 700px;
+    }
+}
+
+@media screen and (max-height: 745px) {
+    .memoryGameWindow {
+        height: 600px;
+    }
+}
+
+@media screen and (max-height: 600px) {
+    .memoryGameWindow {
+        height: 500px;
+    }
 }
