--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 
 .memoryGameWindow {
     grid-column: 2/2;
+    width: 100%;
     max-width: 1200px;
     height: auto;
     margin: 2% auto;
@@ -84,7 +85,7 @@ body {
         width: 900px;
         height: 800px;
     }
-}
+} 
 
 @media screen and (max-height: 850px) {
     .memoryGameWindow {
